<resources>
    <string name="app_name">Loaner</string>

    <string name="wrong_login_or_password">Wrong login or password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="fill_all_fields">Fill all the fields</string>
    <string name="get_new_loan">Get new loan</string>
    <string name="amount">Amount</string>
    <string name="first_name">First name</string>
    <string name="date">Date</string>
    <string name="state">State</string>
    <string name="last_name">Last name</string>
    <string name="percent">Percent</string>
    <string name="period">Period</string>
    <string name="phone_number">Phone number</string>
    <string name="apply">Apply</string>
    <string name="history">History</string>
    <string name="at_the_moment_you_have_no_loans_in_status">At the moment you have no loans</string>
    <string name="pending_decision">Pending decision</string>
    <string name="approved_loans">Approved loans</string>
    <string name="view_loan_history">View loan history</string>
    <string name="you_have_no_loan_applications_yet">You have no loan applications yet</string>
    <string name="approved">Approved</string>
    <string name="registered">Registered</string>
    <string name="rejected">Rejected</string>
    <string name="valuta">rub</string>
    <string name="loan_information">Loan information</string>
    <string name="success_additional_info">You can get money at the nearest bank office. For getting more detailed information call 2398475</string>
    <string name="success_header">Congratulations!\nYou have a new loan approved</string>
    <string name="rejected_header">Sorry,\nthe request was rejected</string>
    <string name="rejected_additional_info">Try again later. For getting more detailed information call 2398475</string>
    <string name="registered_header">Your request was registered!</string>
    <string name="registered_additional_info">Your request will be reviewed by specialists in the nearest future. For getting more detailed information call 2398475</string>
    <string name="to_main_screen">to main screen</string>
    <string name="detailed_information">Detailed information</string>
    <string name="wait">...</string>
    <string name="your_dashboard">Account info</string>
    <string name="total_debt_13237">Total debt: ...</string>
    <string name="next_payment_1233">Next payment: ...</string>
    <string name="getting_loans_has_never_been_easier">Getting loans has never been easier</string>
</resources>